NewInstance Deprecated Fix :hammer: